--- a/Movs/Base.lproj/Main.storyboard
+++ b/Movs/Base.lproj/Main.storyboard
@@ -456,7 +456,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aFZ-5B-jnt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-549" y="1471"/>
+            <point key="canvasLocation" x="-841" y="70"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="88e-9e-Lb8">
@@ -481,7 +481,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="yuV-i2-oRz"/>
+        <segue reference="DR7-zr-AcR"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="bolt.heart" catalog="system" width="128" height="109"/>
